[package]
name = "dc"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3"
local-ip-address = "0.6.3"
once_cell = "1.20.2"
rand = "0.8.5"
serde = "1.0.160"
signal-hook = "0.3.17"
tarpc = { version = "0.35", features = ["tokio1", "serde-transport", "tcp", "serde-transport-json"] }
tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "net", "io-util"] }
tokio-serde = "0.9.0"
zerocopy = "0.8"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]